# ai-investor

./: .env.example  .gitignore  README.md  pyproject.toml
prompts/: get_important_metrics.md  get_important_metrics.txt  promt_generator.md  promt_generator.txt  risk_manager.txt
src/: __main__.py
src/agents/: __init__.py  _cathie_wood.py  _fundamental.py  _peter_lynch.py  _ray_dalio.py  _risk_manager.py  _signal.py  _utils.py  _warren_buffett.py  cathie_wood.py  peter_lynch.py  ray_dalio.py  warren_buffet.py
src/config/: __init__.py  alpha.py  llm.py  log.py
src/config/agents/: __init__.py  warren_buffet.py
src/tools/: __init__.py  alpha.py  api.py
src/tools/_alpha/: __init__.py  _utils.py  balance_sheet.py  cash_flow.py  earnings.py  insider.py  overview.py
src/utils/: context.py  datetime.py  debug.py  format.py
test/: test_tool_alpha.py
test/data/: set_alpha_data.py
test/data/alpha_data/: balance_sheet.json  cash_flow.json  earnings.json
