[project]
name = "ai-investor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "httpx>=0.28.1",
    "llama-index>=0.12.34",
    "llama-index-llms-google-genai>=0.1.12",
    "tyro>=0.9.20",
    "markdown2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
]
